# afaire

./: .clang-format  .gitignore  CMakeLists.txt  README.md  afaire.c  afaire.h  update_deps.sh
